[package]
name = "b3d"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.3" }
bevy-inspector-egui = "0.30.0"
bevy_rapier3d = { version = "0.29.0", features = ["simd-stable"] }
rand = "0.9.0"
