[package]
name = "b3d"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking", "bevy_asset"] }
bevy-inspector-egui = "0.30.0"
bevy_rapier3d = { version = "0.29.0", features = ["simd-stable"] }
inline_tweak = "1.2.1"
rand = "0.9.0"
